fix: increase z-index for h2 element in navigation bar

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h2 {
    display: flex;
    align-items: center;
    flex-direction: column;
-   z-index: 3;
+   z-index: 5;
 }
 
 .navBar__logo {
